--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -4,6 +4,7 @@
 @use "../components/UI/Header/header";
 @use "../components/UI/SideNav/side-nav";
 @use '../components/UI/FeaturedMedia/FeaturedMedia';
+@use '../components/UI/ForYouList/ForYouList';
 
 h1 {
   font-size: 3rem;
