--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -7,6 +7,7 @@
 @use '../components/UI/ForYouList/ForYouList';
 @use '../components/UI/JustAdded/JustAdded';
 @use '../components/UI/PosterView/PosterView';
+@use '../components/UI/CastInfo/CastInfo';
 
 h1 {
   font-size: 3rem;
