--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -8,6 +8,8 @@
 @use '../components/UI/JustAdded/JustAdded';
 @use '../components/UI/PosterView/PosterView';
 @use '../components/UI/CastInfo/CastInfo';
+@use '../components/UI/Account/Account';
+@use '../components/UI/SearchModel/SearchModel';
 
 h1 {
   font-size: 3rem;
