--- a/components/UI/Header/_header.scss
+++ b/components/UI/Header/_header.scss
@@ -11,6 +11,12 @@
   width: 100%;
   z-index: 10;
   transition: background 0.3s ease-in-out;
+  &__menu-btn{
+    cursor: pointer;
+  }
+  &--menu-open{
+    background: rgba($color: #000000, $alpha: 1);
+  }
   &:hover {
     background: rgba($color: #000000, $alpha: 1);
   }
@@ -31,6 +37,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
   }
   &__user-img {
     width: 30px;
