--- a/components/UI/MediaRow/_MediaRow.scss
+++ b/components/UI/MediaRow/_MediaRow.scss
@@ -52,6 +52,7 @@
         opacity: 1;
       }
     }
+
     .fa-play {
       color: white;
       font-size: 4rem;
@@ -60,6 +61,37 @@
       transition: all 0.3s ease-in-out 0.2s;
     }
   }
+  &__thumbnail-skeleton {
+    margin-right: 10px;
+  }
+  &__thumbnail-skeleton-img {
+    background: rgb(19, 19, 19);
+    margin: 10px 0px;
+    position: relative;
+    overflow: hidden;
+  }
+  &__thumbnail-skeleton-img::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: rgba(255, 255, 255, 0.082);
+    height: 100%;
+    transform: skew(5deg);
+    animation: shine infinite 1.5s ease-in-out;
+    filter: blur(100px);
+  }
+
+  @keyframes shine {
+    from {
+      transform: skew(45deg) translateX(-200%);
+    }
+    to {
+      transform: skew(45deg) translateX(300%);
+    }
+  }
+
   &.large-v {
     .media-row__thumbnail {
       width: 400px;
@@ -68,6 +100,14 @@
         width: 400px;
         height: 600px;
       }
+    }
+    .media-row__thumbnail-skeleton {
+      width: 400px;
+      height: 600px;
+    }
+    .media-row__thumbnail-skeleton-img {
+      width: 400px;
+      height: 600px;
     }
   }
   &.small-v {
@@ -79,6 +119,14 @@
         height: 360px;
       }
     }
+    .media-row__thumbnail-skeleton {
+      width: 240px;
+      height: 360px;
+    }
+    .media-row__thumbnail-skeleton-img {
+      width: 240px;
+      height: 360px;
+    }
   }
   &.small-h {
     .media-row__thumbnail {
@@ -89,6 +137,14 @@
         height: 253px;
       }
     }
+    .media-row__thumbnail-skeleton {
+      width: 450px;
+      height: 253px;
+    }
+    .media-row__thumbnail-skeleton-img {
+      width: 450px;
+      height: 253px;
+    }
   }
   &.large-h {
     .media-row__thumbnail {
@@ -98,6 +154,14 @@
         width: 700px;
         height: 394px;
       }
+    }
+    .media-row__thumbnail-skeleton {
+      width: 700px;
+      height: 394px;
+    }
+    .media-row__thumbnail-skeleton-img {
+      width: 700px;
+      height: 394px;
     }
   }
 }
