--- a/components/UI/FeaturedMedia/_FeaturedMedia.scss
+++ b/components/UI/FeaturedMedia/_FeaturedMedia.scss
@@ -34,6 +34,7 @@
     font-weight: 700;
     color: white;
     margin-bottom: 1rem;
+    cursor: pointer;
   }
   &__playing {
     font-size: 0.9rem;
