--- a/components/UI/SearchModel/_SearchModel.scss
+++ b/components/UI/SearchModel/_SearchModel.scss
@@ -10,6 +10,8 @@
   visibility: hidden;
   transition: opacity 0.4s ease-in-out;
   z-index: 13;
+  overflow: auto;
+
   &--active {
     visibility: visible;
     opacity: 1;
@@ -21,6 +23,7 @@
     margin-bottom: 3rem;
   }
   &__input {
+    color: white;
     background: transparent;
     font-size: 4rem;
     border: none;
