--- a/components/UI/Account/_Account.scss
+++ b/components/UI/Account/_Account.scss
@@ -93,17 +93,31 @@
       display: block;
       margin-bottom: 1rem;
       transition: color 0.2s ease-in-out;
-      &.active, &:hover{
-          font-weight: 500;
-          color: white;
+      &.active,
+      &:hover {
+        font-weight: 500;
+        color: white;
       }
     }
   }
   @for $i from 0 through 20 {
-      &--active li:nth-child(#{$i + 1}){
-          transition-delay: 0.25s * $i;
-          opacity: 1;
-      }
+    &--active li:nth-child(#{$i + 1}) {
+      transition-delay: 0.25s * $i;
+      opacity: 1;
+    }
   }
+}
 
+@media only screen and (max-width: 600px) {
+  .account {
+    width: 100%;
+    overflow-y: scroll;
+    flex-direction: column;
+    &__watch-list {
+      grid-template-columns: 1fr;
+    }
+    &__menu {
+      width: 100%;
+    }
+  }
 }
