--- a/components/UI/SearchModel/_SearchModel.scss
+++ b/components/UI/SearchModel/_SearchModel.scss
@@ -108,3 +108,18 @@
     }
   }
 }
+
+@media only screen and (max-width: 600px) {
+  .search-model {
+    width: 100%;
+    padding: 20px;
+    &__input {
+      margin-top: 30px;
+      width: 100%;
+      font-size: 1.9rem;
+    }
+    &__close-btn {
+      font-size: 1.9rem;
+    }
+  }
+}
